--- a/bower.json
+++ b/bower.json
@@ -12,15 +12,14 @@
     "tests"
   ],
   "devDependencies": {
-    "axios": "^0.17.1",
+    "axios": "*",
     "dat.gui": "*",
-    "es6-promise": "^4.1.0",
-    "gsap": "^1.20.3",
-    "jquery": "^3.2.1",
-    "underscore": "^1.8.3",
+    "es6-promise": "*",
+    "gsap": "*",
+    "underscore": "*",
     "three.js": "threejs#*",
-    "webfontloader": "^1.6.28",
-    "mobile-detect": "^1.3.7",
+    "webfontloader": "*",
+    "mobile-detect": "*",
     "stats.js": "*"
   }
 }
