--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "serve-static": "^1.10.0",
     "simplex-noise": "^2.4.0",
     "style-loader": "^0.23.0",
+    "through2": "^3.0.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^2.0.0",
