--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-webserver": "^0.9.1",
     "gulp.spritesmith": "^6.0.0",
     "merge-stream": "^1.0.0",
+    "mobile-detect": "^1.4.4",
     "node-notifier": "^5.1.2",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
@@ -80,6 +81,7 @@
     "vue-loader": "^15.4.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
+    "webfontloader": "^1.6.28",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-stream": "^5.1.1"
